[Pytorch] add aten::rnn_tanh, aten::rnn_relu (#12017)
* emptycommit 2nd try

* dev

* comments

* format

* format

Co-authored-by: yuanfz <42092999+FZYUAN-1@users.noreply.github.com>

init amm conv

add dummy amm_conv2d op for arm

add subvec len in attributes

fix subvec_len parameter miss match

mute print

add amm conv2d schedule

add android / x86 config

Fix performance issue

Fix amm conv2d schedule

Fix padding bug

add frontend amm_linear relay

add dummy amm linear op to bachend

Add amm linear

Update 3rdparty/blink-mm-kernels

add x86 amm

update mm kernel

Support x86 for amm

Use new blink_mm_kernels

Update blink-mm-kernels

Update blink-mm-kernels

add int8 relay op

Use parallel lut-nn kernels

fix _make.amm_linear error

Use new blink-mm-kernels version

add amm linear op for x86

Use new blink-mm-kernels version

Update blink-mm-kernels version

Add code to make fused code parallel

Update blink-mm-kernels version

Remove vta-hw

Change blink-mm-kernels repo url

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "3rdparty/cutlass"]
 	path = 3rdparty/cutlass
 	url = https://github.com/NVIDIA/cutlass.git
+[submodule "3rdparty/blink-mm-kernels"]
+	path = 3rdparty/blink-mm-kernels
+	url = https://github.com/lutnn/blink-mm-kernels.git
